Added particles and created some parts of the welcome page

--- a/presentation-layer/public/index.html
+++ b/presentation-layer/public/index.html
@@ -27,6 +27,26 @@
     <title>Guess Ninja</title>
   </head>
   <body>
+    <style>
+      *{
+        margin:0;
+        padding:0;
+        box-sizing: border-box;
+      }
+      html{
+        height:100vh;
+        width: 100vw;
+        font-size: 62.5%;
+      }
+      body, #root{
+        height: 100%;
+        width: 100%;
+      }
+      body{
+        background-color: #000;
+        font-size: 1.6rem;
+      }
+    </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
