--- a/presentation-layer/public/index.html
+++ b/presentation-layer/public/index.html
@@ -49,6 +49,8 @@
       body{
         background-color: #000;
         font-size: 1.6rem;
+        font-family: 'Roboto', sans-serif;
+
       }
     </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
