feat: add Modal component

--- a/presentation-layer/public/index.html
+++ b/presentation-layer/public/index.html
@@ -55,6 +55,7 @@
     </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="modal-root"></div>
     <!--
      
     -->
