--- a/presentation-layer/public/index.html
+++ b/presentation-layer/public/index.html
@@ -41,6 +41,7 @@
         height:100vh;
         width: 100vw;
         font-size: 62.5%;
+        overflow: hidden;
       }
       body, #root{
         height: 100%;
