chore: add new font and remove unwanted font

--- a/presentation-layer/public/index.html
+++ b/presentation-layer/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&family=Orbitron:wght@400;900&family=Cripster&family=Roboto:wght@300&family=Rubik+Storm&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&family=Orbitron:wght@400;900&family=Roboto:wght@300&family=Montserrat:wght@300;500&display=swap" rel="stylesheet">
 
     <link rel="shortcut icon" href="%PUBLIC_URL%/ninja-gaming-logo-icon.png" type="image/png"/>
 
@@ -51,7 +51,7 @@
       body{
         background-color: #000;
         font-size: 1.6rem;
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Montserrat', sans-serif;
 
       }
     </style>
