--- a/presentation-layer/public/index.html
+++ b/presentation-layer/public/index.html
@@ -42,11 +42,13 @@
         height:100vh;
         width: 100vw;
         font-size: 62.5%;
-        overflow: hidden;
+
       }
       body, #root{
         height: 100%;
         width: 100%;
+        overflow: hidden
+
       }
       body{
         background-color: #000;
