fix: add overflow property to resolve bottom part of the page being hidden on mobile

--- a/presentation-layer/public/index.html
+++ b/presentation-layer/public/index.html
@@ -2,24 +2,50 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&family=Orbitron:wght@400;900&family=Roboto:wght@300&family=Montserrat:wght@300;500&display=swap" rel="stylesheet">
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&family=Orbitron:wght@400;900&family=Roboto:wght@300&family=Montserrat:wght@300;500&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="shortcut icon" href="%PUBLIC_URL%/ninja-gaming-logo-icon.png" type="image/png"/>
+    <link
+      rel="shortcut icon"
+      href="%PUBLIC_URL%/ninja-gaming-logo-icon.png"
+      type="image/png"
+    />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    />
+    <meta
+      name="theme-color"
+      content="#000000"
+    />
     <meta
       name="description"
       content="A guess game to spice up your day"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/ninja-gaming-logo-icon.png.png" />
+    <link
+      rel="apple-touch-icon"
+      href="%PUBLIC_URL%/ninja-gaming-logo-icon.png.png"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="manifest"
+      href="%PUBLIC_URL%/manifest.json"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -33,28 +59,26 @@
   </head>
   <body>
     <style>
-      *{
-        margin:0;
-        padding:0;
+      * {
+        margin: 0;
+        padding: 0;
         box-sizing: border-box;
       }
-      html{
-        height:100vh;
+      html {
+        height: 100vh;
         width: 100vw;
         font-size: 62.5%;
-
       }
-      body, #root{
+      body,
+      #root {
         height: 100%;
         width: 100%;
-        overflow: hidden
-
+        overflow: auto;
       }
-      body{
+      body {
         background-color: #000;
         font-size: 1.6rem;
-        font-family: 'Montserrat', sans-serif;
-
+        font-family: "Montserrat", sans-serif;
       }
     </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
